add animation using keyboard event

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -66,7 +66,16 @@
 
     audio.play();
     console.log(key);
+    key.classList.add('playing');
   });
+
+
+  function removeTransition(e) {
+    console.log(e);
+  }
+
+  const keys = document.querySelectorAll('.key');
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
 
 
 </script>
