--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -71,10 +71,13 @@
   </style>
 
   <script>
+    const secondHand = document.querySelector('.second-hand');
+
     function setDate() {
       const now = new Date();
       const seconds = now.getSeconds();
-      console.log(seconds)
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg`;
 
     }
 
