--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -79,6 +79,10 @@
       const secondsDegrees = ((seconds / 60) * 360) + 90;
       secondHand.style.transform = `rotate(${secondsDegrees}deg`;
 
+      const mins = now.getMinutes();
+      const minsDegrees = ((mins / 60) * 360) + 90;
+      hourHand.style.trasnform = `rotate(${minsDegrees}deg)`;
+
     }
 
     setInterval(setDate, 1000);
